[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
symbol_table = { version = "0.1.0", path = "../symbol_table" }

parse = {path = "../parse"}
typecheck = {path = "../typecheck"}
