[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse = { path = "../parse" }
typecheck = { path = "../typecheck" }
symbol_table = { path = "../symbol_table" }
codegen = { path = "../codegen" }
const_format = "0.2.30"
