[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typecheck = {path = "../typecheck"}

[profile.release]
lto = "fat"

[profile.release-with-debug]
inherits = "release"
debug = true