[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
hwlocality = { git = "https://github.com/HadrienG2/hwlocality", version = "1.0.0" }
libc = "0.2.144"
typecheck = {path = "../typecheck"}
